@@ -64,7 +64,7 @@ INSERT INTO `entry` (`id`, `code_id`, `entry_title`, `entry_text`, `entry_date`,
 (32, 'dom_funded', 'Domestically-funded mitigation', '<p class=\"Para3\">Mitigation funded by a country or region and carried out within its own borders.</p>\r\n<p class=\"Para3\">Critically, national&nbsp;fair shares of the global mitigation requirement are&nbsp;<strong><em>not</em>&nbsp;</strong>seen in domestic terms. The <em>Climate Equity Reference Calculator rather&nbsp;</em>views climate as a global commons problem that can only be solved within a&nbsp;high-cooperation international&nbsp;regime. Such a regime can only be established if each Party sees others to be&nbsp;doing their best to do their fair shares in the face of the common challenge. &nbsp;</p>\r\n<p class=\"Para3\">In practice, of course, each country will decide, on the basis of its own specific considerations&nbsp;(e.g. it&rsquo;s own view of&nbsp;costs, co-benefits and political-economic tradeoffs) what fraction of its fair share of the global mitigation effort it&nbsp;will attempt domestically, and what fraction it will make&nbsp;off shore, by supporting mitigation&nbsp;action&nbsp;in other countries.</p>', '2012-11-03', '2016-11-04', 0, 1),
 (33, 'mit_fundedbyothers', 'Mitigation funded by other countries', '<p class=\"Para3\">Mitigation funded by one country or region, but carried out within the borders of another. This mitigation is considered to count as (at least in part) an action of the country providing the support, though of course the terms of the mitigation would be as negotiated with the host country.</p>', '2012-11-03', '2015-05-21', 0, 1),
 (34, 'lux_threshold', 'Luxury threshold', '<p class=\"Para3\">The luxury threshold is disabled by default, and when enabled it defaults to a figure ($100,000)&nbsp;that approximates the annual income (in MER or market-exchange rate dollars) of the top 1% of the global population -- the \"global one percent.\"</p>\r\n<p class=\"Para3\">When enabled (by checking the \"Progressive between thresholds\" box), once income rises above the <a href=\"glossary.php#gloss_dev_threshold\" target=\"_self\">development threshold</a>, a linearly increasing percentage of that income (and the associated emissions) are counted towards national capability (and responsibility), until, when the luxury threshold is reached, it is fully counted toward national capability. The effect is to shift obligation up the global income scale. This is a simple analog to a progressive income tax, with a zero tax bracket up to the Development Threshold, and a maximum tax bracket starting at the Luxury Threshold. (See also <a href=\"glossary.php#lux_multiplier\" target=\"_self\">luxury multiplier</a>, which allows the user to apply a multiplier to income about the luxury threshold in the calculation of capability.)</p>\r\n<p class=\"Para3\">Note that, while this has been provided in the Climate Equity Reference Calculator as a simple and defensible implementation of a progressive way to calculate national capability, it is by no means the only possibility. The options for a globally progressive allocation of fair shares are under-researched, but further study and better data collection can will presumably yield other sensible alternatives.&nbsp;</p>', '2012-11-03', '2016-11-04', 0, 1),
-(35, 'lu_emissions', 'Land-use emissions', '<p class=\"Para3\">Emissions from land use and land cover change are net releases of greenhouse gases that result from the management of land. These can include deforestation (which typically releases CO<sub>2</sub>), afforestation and reforestation (which typically store CO<sub>2</sub>), different agricultural or forestry practices that affect carbon stored in plants or soils, and other sources. To include land-use emissions, check this control. For more information about land-use emissions, see the <a href=\"http://www.ipcc.ch/ipccreports/sres/land_use/index.php?idp=0\" target=\"_blank\">IPCC Special Report on Land Use, Land-Use Change, and Forestry</a>. And see Kate Dooley and Sivan Kartha, <a href=\"https://www.sei-international.org/publications?pid=2996\">The risks of relying on tomorrow&rsquo;s &lsquo;negative emissions&rsquo; to guide today&rsquo;s mitigation action</a>, SEI Working Paper No 2016-08. &nbsp;</p>', '2012-11-03', '2016-11-04', 0, 1),
+(35,'lu_emissions','Land-use emissions','<p class=\"Para3\">Emissions from land use and land cover change are net releases of greenhouse gases that result from the management of land. These can include deforestation (which typically releases CO<sub>2</sub>), afforestation and reforestation (which typically store CO<sub>2</sub>), different agricultural or forestry practices that affect carbon stored in plants or soils, and other sources.</p>\r\n<p class=\"Para3\">The Climate Equity Reference Calculator does not support inclusion of LULUCF emissions in the effort sharing calculations anymore. There are several reasons for this. First, the available data for national land use emissions are partial, inconsistent, and contain well-known inaccuracies, a problem that is only compounded by the various well-known opportunities for accounting mischief. A second reason is that, even with accurate data and accounting, a strict fungibility between fossil carbon and land-based carbon is deeply problematic, in that it falsely equates the scope for labile, limited, and multi-purpose stock of carbon on the land to substitute for the permanent and secure stock of fossil carbon deep underground. Third, the extremely close link between land use and other sustainability and human rights concerns suggests that land must be managed within a substantively different type of regime than the UNFCCC, one that focuses on human rights, food security, indigenous rights, biodiversity, and watershed protection, lest it risk seriously undermining these other objectives. This is not to suggest that action on land-related emissions is unimportant or does not warrant science- and equity-based assessment, but rather to argue that such actions should be placed in their holistic context. We are exploring including LULUCF emissions again in the future, albeit only in the context of establishing responsibility for emissions, as opposed to calculating fair shares of future mitigation in the LULUCF sector.</p>\r\n<p class=\"Para3\">For more information about land-use emissions, see the <a href=\"http://www.ipcc.ch/ipccreports/sres/land_use/index.php?idp=0\" target=\"_blank\" rel=\"noopener\">IPCC Special Report on Land Use, Land-Use Change, and Forestry</a>. And see Kate Dooley and Sivan Kartha, <a href=\"https://www.sei-international.org/publications?pid=2996\">The risks of relying on tomorrow&rsquo;s &lsquo;negative emissions&rsquo; to guide today&rsquo;s mitigation action</a>, SEI Working Paper No 2016-08. &nbsp;</p>','2012-11-03','2019-03-07',0,1),
 (36, 'non_co2_gases', 'Non-CO2 gases', '<p>The most important of the greenhouse gases (GHGs) is carbon dioxide (CO<sub>2</sub>), because it makes the largest single contribution to planetary warming (see <a href=\"http://www.ipcc.ch/publications_and_data/ar4/wg1/en/figure-spm-2.html\">this figure on radiative forcing</a>&nbsp;in the IPCC Fourth Assessment Report). However, non-CO<sub>2</sub> gases are also important drivers of climate change, notably methane (CH<sub>4</sub>) and nitrous oxide (N<sub>2</sub>O). The default case here includes all gases. To exclude the non-CO<sub>2</sub> gases, un-check this control.</p>', '2012-11-03', '2013-10-22', 0, 1),
 (37, 'r_weight', 'Responsibility weight', '<p class=\"Para2\">The <a href=\"glossary.php#gloss_rci\" target=\"_self\"><span style=\"text-decoration: underline;\">Responsibly and Capability Index</span></a> is a combined indicator of <a href=\"glossary.php/#gloss_responsibility\" target=\"_self\">responsibility</a> and <a href=\"glossary.php#gloss_capacity\" target=\"_self\">capability</a>, which are weighted equally -- 50/50 --&nbsp; in the default case (i.e., they are averaged). This setting allows the user to select an alternative weighting for responsibility. (The capability weighting will automatically set at 1 minus the responsibility weighting.)</p>\r\n<p class=\"Para2\">Note that, for most countries, the weighting it matters little, because responsibility and capability&nbsp;tend to be (but are not always) highly correlated.&nbsp;</p>', '2012-11-04', '2016-11-04', 0, 1),
 (39, 'embodied_emissions', 'Emissions embodied in trade', '<p class=\"Para2\">Embodied emissions are emissions generated during production and transport of a good. National emissions inventories typically assign embodied emissions to the producing country: for example, if China produces a widget that it exports to the US, the emissions generated in the manufacture of the widget would be assigned to China. However, many have argued for assigning at least some of the emissions embodied in the widget to the consuming country. The calculator\'s standard setting follows standard practice and assign all emissions to the producing country. If however you select&nbsp;<em>Include emissions embodied in trade</em>, all the emissions embodied in traded goods are assigned to the consuming country.</p>', '2012-11-04', '2014-03-08', 0, 1),
