@@ -1,4 +1,8 @@
-rev 579 (2019-02-23) (krueschan)
+rev 581 (2019-03-07) (krueschan)
+- changed presentation of LULUCF (now disabled checkbox with explanation why we don't support it anymore)
+
+rev 579-580 (2019-02-23) (krueschan)
+- typo
 - changed suggested docker install to port 8080
 - edit calc.js to work with non-standard ports
 
